--- a/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -117,40 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Footer.Privacy" xml:space="preserve">
-    <value>Preifatrwydd</value>
-  </data>
-  <data name="Footer.Cookies" xml:space="preserve">
-    <value>Cwcis</value>
+  <data name="Footer.Accessibility" xml:space="preserve">
+    <value>Datganiad hygyrchedd</value>
   </data>
   <data name="Footer.AllContent" xml:space="preserve">
     <value>Mae’r cynnwys i gyd ar gael o dan </value>
   </data>
+  <data name="Footer.Cookies" xml:space="preserve">
+    <value>Cwcis</value>
+  </data>
   <data name="Footer.CrownCopyright" xml:space="preserve">
     <value>© Hawlfraint y Goron</value>
+  </data>
+  <data name="Footer.CustomerServiceTimes" xml:space="preserve">
+    <value>Dydd Llun i ddydd Gwener, 8:30am i 4:30pm</value>
+  </data>
+  <data name="Footer.Email" xml:space="preserve">
+    <value>Ebost</value>
   </data>
   <data name="Footer.ExceptWhere" xml:space="preserve">
     <value>, ac eithrio lle nodir yn wahanol</value>
   </data>
+  <data name="Footer.GetHelp" xml:space="preserve">
+    <value>Cael Help</value>
+  </data>
+  <data name="Footer.LicenceDescription1" xml:space="preserve">
+    <value>Mae’r holl gynnwys ar gael dan y </value>
+  </data>
+  <data name="Footer.LicenceDescription2" xml:space="preserve">
+    <value>Drwydded Llywodraeth Agored, fersiwn 3.0</value>
+  </data>
+  <data name="Footer.LicenceDescription3" xml:space="preserve">
+    <value>, fersiwn 3.0, oni nodir yn wahanol</value>
+  </data>
   <data name="Footer.OpenGovernment" xml:space="preserve">
     <value>Drwydded Llywodraeth Agored v3.0</value>
   </data>
-  <data name="Footer.Accessibility" xml:space="preserve">
-    <value>Datganiad hygyrchedd</value>
+  <data name="Footer.Privacy" xml:space="preserve">
+    <value>Preifatrwydd</value>
   </data>
   <data name="Footer.SupportLinks" xml:space="preserve">
     <value>Dolenni cymorth</value>
   </data>
-  <data name="Footer.CustomerServiceTimes" xml:space="preserve">
-    <value>[Welsh]Monday to Friday, 8:30am to 4:30pm</value>
-  </data>
-  <data name="Footer.Email" xml:space="preserve">
-    <value>[Welsh]Email</value>
-  </data>
-  <data name="Footer.GetHelp" xml:space="preserve">
-    <value>[Welsh]Get help</value>
-  </data>
   <data name="Footer.Telephone" xml:space="preserve">
-    <value>[Welsh]Telephone</value>
+    <value>Ffôn</value>
   </data>
 </root>
