Fixed Welsh translations

--- a/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -148,7 +148,7 @@
     <value>Drwydded Llywodraeth Agored, fersiwn 3.0</value>
   </data>
   <data name="Footer.LicenceDescription3" xml:space="preserve">
-    <value>, fersiwn 3.0, oni nodir yn wahanol</value>
+    <value>, oni nodir yn wahanol</value>
   </data>
   <data name="Footer.OpenGovernment" xml:space="preserve">
     <value>Drwydded Llywodraeth Agored v3.0</value>
