--- a/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -160,6 +160,6 @@
     <value>Drwydded Llywodraeth Agored, fersiwn 3.0</value>
   </data>
   <data name="Footer.LicenceDescription3" xml:space="preserve">
-    <value>, fersiwn 3.0, oni nodir yn wahanol</value>
+    <value>, oni nodir yn wahanol</value>
   </data>
 </root>
