Lowercased Help for welsh translation

--- a/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -139,7 +139,7 @@
     <value>, ac eithrio lle nodir yn wahanol</value>
   </data>
   <data name="Footer.GetHelp" xml:space="preserve">
-    <value>Cael Help</value>
+    <value>Cael help</value>
   </data>
   <data name="Footer.LicenceDescription1" xml:space="preserve">
     <value>Mae’r holl gynnwys ar gael dan y </value>
