--- a/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/Shared/Partials/Govuk/_Footer.cy.resx
@@ -148,7 +148,7 @@
     <value>Ebost</value>
   </data>
   <data name="Footer.GetHelp" xml:space="preserve">
-    <value>Cael Help</value>
+    <value>Cael help</value>
   </data>
   <data name="Footer.Telephone" xml:space="preserve">
     <value>Ffôn</value>
