--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckYourDetails.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckYourDetails.en.resx
@@ -117,28 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ManageAccountDetails" xml:space="preserve">
-    <value>Manage account details</value>
+  <data name="FirstName" xml:space="preserve">
+    <value>First name</value>
   </data>
-  <data name="ManageYourTeam" xml:space="preserve">
-    <value>Manage your team</value>
+  <data name="WhatAreYourDetails" xml:space="preserve">
+    <value>What are your details?</value>
   </data>
-  <data name="AddTeamMember" xml:space="preserve">
-    <value>Add team member</value>
+  <data name="JobTitle" xml:space="preserve">
+    <value>Job title</value>
   </data>
-  <data name="YouSentInvitation" xml:space="preserve">
-    <value>You sent an invitation to {0}</value>
+  <data name="LastName" xml:space="preserve">
+    <value>Last name</value>
   </data>
-  <data name="UserAlreadyInvited" xml:space="preserve">
-    <value>Someone on your team has already sent an invitation to {0}</value>
+  <data name="PhoneNumber" xml:space="preserve">
+    <value>Telephone number</value>
   </data>
-  <data name="UserRemoved" xml:space="preserve">
-    <value>You removed {0} from your team</value>
-  </data>
-  <data name="PermissionsUpdated" xml:space="preserve">
-    <value>{0}’s permissions updated</value>
-  </data>
-  <data name="CheckYourDetails" xml:space="preserve">
-    <value>Check your details</value>
+  <data name="SaveAndContinue" xml:space="preserve">
+    <value>Save and continue</value>
   </data>
 </root>
