--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/EditUserDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/EditUserDetails.cy.resx
@@ -123,11 +123,17 @@
   <data name="FirstName" xml:space="preserve">
     <value>[Welsh]First name</value>
   </data>
+  <data name="FirstNameMaxLength" xml:space="preserve">
+    <value>[Welsh]First name must be 50 characters or less</value>
+  </data>
   <data name="FirstNameMissing" xml:space="preserve">
     <value>[Welsh]Enter your first name</value>
   </data>
   <data name="JobTitle" xml:space="preserve">
     <value>[Welsh]Job title</value>
+  </data>
+  <data name="JobTitleMaxLength" xml:space="preserve">
+    <value>[Welsh]Job title must be 50 characters or less</value>
   </data>
   <data name="JobTitleMissing" xml:space="preserve">
     <value>[Welsh]Enter your job title</value>
@@ -135,8 +141,14 @@
   <data name="LastName" xml:space="preserve">
     <value>[Welsh]Last name</value>
   </data>
+  <data name="LastNameMaxLength" xml:space="preserve">
+    <value>[Welsh]Last name must be 50 characters or less</value>
+  </data>
   <data name="LastNameMissing" xml:space="preserve">
-    <value>[Welsh]Last name is a required field</value>
+    <value>[Welsh]Enter your last name</value>
+  </data>
+  <data name="TelephoneMaxLength" xml:space="preserve">
+    <value>[Welsh]Telephone number must be 50 characters or less</value>
   </data>
   <data name="TelephoneNumber" xml:space="preserve">
     <value>[Welsh]Telephone number</value>
