--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.cy.resx
@@ -139,4 +139,28 @@ Rheoli manylion y cyfrif</value>
   <data name="PermissionsUpdated" xml:space="preserve">
     <value>Caniatâd {0} wedi’i ddiweddaru</value>
   </data>
+  <data name="JobTitle" xml:space="preserve">
+    <value>Job title - wales text here</value>
+  </data>
+  <data name="OrganisationAddress" xml:space="preserve">
+    <value>Address - wales text here</value>
+  </data>
+  <data name="Permissions" xml:space="preserve">
+    <value>Permissions - wales text here</value>
+  </data>
+  <data name="TelephoneNumber" xml:space="preserve">
+    <value>Telephone number - wales text here</value>
+  </data>
+  <data name="CompanyName" xml:space="preserve">
+    <value>Company name - wales text here</value>
+  </data>
+  <data name="YourDetails" xml:space="preserve">
+    <value>Your details - wales text here</value>
+  </data>
+  <data name="YourName" xml:space="preserve">
+    <value>Name - wales text here</value>
+  </data>
+  <data name="YourOrganisation" xml:space="preserve">
+    <value>Your organisation - wales text here</value>
+  </data>
 </root>
