--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.en.resx
@@ -138,4 +138,28 @@
   <data name="PermissionsUpdated" xml:space="preserve">
     <value>{0}’s permissions updated</value>
   </data>
+  <data name="JobTitle" xml:space="preserve">
+    <value>Job title</value>
+  </data>
+  <data name="OrganisationAddress" xml:space="preserve">
+    <value>Address</value>
+  </data>
+  <data name="Permissions" xml:space="preserve">
+    <value>Permissions</value>
+  </data>
+  <data name="TelephoneNumber" xml:space="preserve">
+    <value>Telephone number</value>
+  </data>
+  <data name="CompanyName" xml:space="preserve">
+    <value>Company name</value>
+  </data>
+  <data name="YourDetails" xml:space="preserve">
+    <value>Your details</value>
+  </data>
+  <data name="YourName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="YourOrganisation" xml:space="preserve">
+    <value>Your organisation</value>
+  </data>
 </root>
