--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.cy.resx
@@ -140,25 +140,25 @@ Rheoli manylion y cyfrif</value>
     <value>Caniatâd {0} wedi’i ddiweddaru</value>
   </data>
   <data name="JobTitle" xml:space="preserve">
-    <value>[Welsh] Job title</value>
+    <value>[Welsh] Job title:</value>
   </data>
   <data name="OrganisationAddress" xml:space="preserve">
-    <value>[Welsh] Address</value>
+    <value>[Welsh] Address:</value>
   </data>
   <data name="Permissions" xml:space="preserve">
-    <value>[Welsh] Permissions</value>
+    <value>[Welsh] Permissions:</value>
   </data>
   <data name="TelephoneNumber" xml:space="preserve">
-    <value>[Welsh] Telephone number</value>
+    <value>[Welsh] Telephone number:</value>
   </data>
   <data name="CompanyName" xml:space="preserve">
-    <value>[Welsh] Company name</value>
+    <value>[Welsh] Trading name:</value>
   </data>
   <data name="YourDetails" xml:space="preserve">
     <value>[Welsh] Your details</value>
   </data>
   <data name="YourName" xml:space="preserve">
-    <value>[Welsh] Name</value>
+    <value>[Welsh] Name:</value>
   </data>
   <data name="YourOrganisation" xml:space="preserve">
     <value>[Welsh] Your organisation</value>
