--- a/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/AccountManagement/ManageAccount.en.resx
+++ b/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/AccountManagement/ManageAccount.en.resx
@@ -139,25 +139,25 @@
     <value>{0}’s permissions updated</value>
   </data>
   <data name="JobTitle" xml:space="preserve">
-    <value>Job title</value>
+    <value>Job title:</value>
   </data>
   <data name="OrganisationAddress" xml:space="preserve">
-    <value>Address</value>
+    <value>Address:</value>
   </data>
   <data name="Permissions" xml:space="preserve">
-    <value>Permissions</value>
+    <value>Permissions:</value>
   </data>
   <data name="TelephoneNumber" xml:space="preserve">
-    <value>Telephone number</value>
+    <value>Telephone number:</value>
   </data>
   <data name="CompanyName" xml:space="preserve">
-    <value>Company name</value>
+    <value>Trading name:</value>
   </data>
   <data name="YourDetails" xml:space="preserve">
     <value>Your details</value>
   </data>
   <data name="YourName" xml:space="preserve">
-    <value>Name</value>
+    <value>Name:</value>
   </data>
   <data name="YourOrganisation" xml:space="preserve">
     <value>Your organisation</value>
