Bug fixes for the check your company details

--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.en.resx
@@ -130,6 +130,6 @@
     <value>Trading name</value>
   </data>
   <data name="UKNation" xml:space="preserve">
-    <value>Uk nation</value>
+    <value>Uk Nation</value>
   </data>
 </root>
