--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.cy.resx
@@ -127,6 +127,6 @@
     <value>[Welsh]Trading name</value>
   </data>
   <data name="UKNation" xml:space="preserve">
-    <value>[Welsh]Uk Nation</value>
+    <value>[Welsh]UK Nation</value>
   </data>
 </root>
