Bug fixes for the check your company details (#46)
* Bug fixes for the check your company details

* Fix text as required

---------

Co-authored-by: Nicholas Peters <nicholas.peters.external@eviden.com>

--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CheckCompaniesHouseDetails.cy.resx
@@ -127,6 +127,6 @@
     <value>[Welsh]Trading name</value>
   </data>
   <data name="UKNation" xml:space="preserve">
-    <value>[Welsh]Uk nation</value>
+    <value>[Welsh]UK Nation</value>
   </data>
 </root>
