--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Body" xml:space="preserve">
-    <value>Because of your permissions this change will need to be reviewed by the regulator. You will be notified within 28 days.</value>
+    <value>Your organisation's account data has been updated.</value>
+  </data>
+  <data name="Body2" xml:space="preserve">
+    <value>You must notify the regulator of this change by submitting organisation data.</value>
   </data>
   <data name="ChangedBy" xml:space="preserve">
-    <value>Changed by {0} at {1} on {2}.</value>
+    <value>Changed by {0} at {1}{2} on {3}&lt;sup&gt;{4}&lt;/sup&gt; {5} {6}.</value>
   </data>
   <data name="Header" xml:space="preserve">
     <value>Your organisation's details have been updated</value>
