--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
@@ -132,6 +132,9 @@
   <data name="ManageAccountLink" xml:space="preserve">
     <value>Go to manage account</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Company Details Updated</value>
+  </data>
   <data name="WhatHappensNext" xml:space="preserve">
     <value>What happens next</value>
   </data>
