--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ManageAccount.en.resx
@@ -165,4 +165,7 @@
   <data name="CheckYourDetails" xml:space="preserve">
     <value>Check your details</value>
   </data>
+  <data name="Pending" xml:space="preserve">
+    <value>Pending</value>
+  </data>
 </root>
