--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ConfirmCompanyDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/ConfirmCompanyDetails.cy.resx
@@ -117,19 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ManageAccountLinkDescription" xml:space="preserve">
-    <value>Go to manage account</value>
+  <data name="CompaniesHouseAddress" xml:space="preserve">
+    <value>[Welsh]Address:</value>
+  </data>
+  <data name="CompanyHouseNumber" xml:space="preserve">
+    <value>[Welsh]Companies House number:</value>
+  </data>
+  <data name="ConfirmationTitle" xml:space="preserve">
+    <value>[Welsh]Confirm your organisation’s details from Companies House</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Your change of details request has been sent to the regulator</value>
+    <value>Cadarnhau manylion eich sefydliad gan Dŷ'r Cwmnïau</value>
   </data>
-  <data name="RequestedMessage" xml:space="preserve">
-    <value>Your change of details request has been sent to the regulator</value>
+  <data name="WrongDetails" xml:space="preserve">
+    <value>[Welsh]These details are wrong</value>
   </data>
-  <data name="WhatHappensNextHeader" xml:space="preserve">
-    <value>What happens next</value>
+  <data name="WrongDetailsDescription" xml:space="preserve">
+    <value>[Welsh]Check Companies House to see if your organisation’s details are correct. If they aren’t, you can</value>
   </data>
-  <data name="WhatHappensNextInformation" xml:space="preserve">
-    <value>Because of your permissions this change will need to be reviewed by the regulator. You will be notified within 28 days.</value>
+  <data name="WrongDetailsDescription2" xml:space="preserve">
+    <value>[Welsh]change them on Companies House (opens in new tab)</value>
+  </data>
+  <data name="WrongDetailsHelp" xml:space="preserve">
+    <value>[Welsh]If these details are wrong, you should:</value>
   </data>
 </root>
