--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/UpdateDetailsConfirmation.en.resx
@@ -123,4 +123,7 @@
   <data name="ManageAccountLinkDescription" xml:space="preserve">
     <value>Go to manage account</value>
   </data>
+  <data name="PageTitle" xml:space="preserve">
+    <value>Your details have been updated</value>
+  </data>
 </root>
