--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsHaveNotChanged.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsHaveNotChanged.en.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="PageHeading" xml:space="preserve">
-    <value>Your organisation details have not changed</value>
+    <value>Your organisation details have not yet been updated on Companies House </value>
   </data>
   <data name="CompaniesHouseNumber" xml:space="preserve">
     <value>Companies House number:</value>
