--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/CompanyDetailsUpdated.en.resx
@@ -118,10 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Body" xml:space="preserve">
-    <value>Your organisation's account data has been updated.</value>
-  </data>
-  <data name="Body2" xml:space="preserve">
-    <value>You must notify the regulator of this change by submitting organisation data.</value>
+    <value>You must tell the regulator about the update to your organisation details. To do this, submit a new organisation details file. &lt;br/&gt;&lt;br/&gt; You must do this within 28 days of your organisation changing their details. &lt;br/&gt;&lt;br/&gt; If you have already submitted a file with updated information, you do not need to do it again.</value>
   </data>
   <data name="ChangedBy" xml:space="preserve">
     <value>Changed by {0} at {1}{2} on {3}&lt;sup&gt;{4}&lt;/sup&gt; {5} {6}.</value>
@@ -136,6 +133,6 @@
     <value>Company Details Updated</value>
   </data>
   <data name="WhatHappensNext" xml:space="preserve">
-    <value>What happens next</value>
+    <value>What you must do next</value>
   </data>
 </root>
