--- a/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/DetailsChangeRequested.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/AccountManagement/DetailsChangeRequested.en.resx
@@ -120,6 +120,9 @@
   <data name="ManageAccountLinkDescription" xml:space="preserve">
     <value>Go to manage account</value>
   </data>
+  <data name="PageTitle" xml:space="preserve">
+    <value>Your change of details request has been sent to the regulator</value>
+  </data>
   <data name="RequestedMessage" xml:space="preserve">
     <value>Your change of details request has been sent to the regulator</value>
   </data>
